test_programs/ok/7.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	console {
		storage: 32 GB,
		display {
			diagonal: 17 inch,
			type: OLED,
			resolution: 5K
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: black
	},
	game {
		name: Hedwig the Hedgehog
	}
}