test_programs/bad/5.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: 1080p
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: black
	},
	game {
		name: Hedwig the Hedgehog
	}
}